# simdist

./: .gitignore  .gitmodules  README.md  pyproject.toml
checkpoints/models/go2_2026-02-12/: model_config.yaml
checkpoints/models/go2_2026-02-12/367004/: _CHECKPOINT_METADATA
checkpoints/models/go2_2026-02-12/367004/default/: _METADATA  _sharding  manifest.ocdbt
checkpoints/models/go2_2026-02-12/367004/default/array_metadatas/: process_0
checkpoints/models/go2_2026-02-12/367004/default/ocdbt.process_0/: manifest.ocdbt
checkpoints/rl/go2_2026-02-11/critics/: critic_4999.pt
checkpoints/rl/go2_2026-02-11/policies/: policy_0.pt  policy_100.pt  policy_1000.pt  policy_150.pt  policy_200.pt  policy_2000.pt  policy_250.pt  policy_300.pt  policy_400.pt  policy_4999.pt  policy_50.pt  policy_500.pt
config/: aggregate_realworld_data.yaml  finetune_model.yaml  generate_data.yaml  process_data.yaml  simulate_go2.yaml  train_model.yaml
config/control/: mppi.yaml
config/heads/: all.yaml  world_model_dynamics_only.yaml
config/loss/: world_model.yaml  world_model_dynamics_only.yaml
config/model/: quadruped_world_model.yaml  quadruped_world_model_proprio.yaml  world_model.yaml
config/system/: go2.yaml  go2_no-vel.yaml
docs/: adaptation.md  deployment_go2.md  installation.md  pretraining_go2.md
go2_ros2_ws/: .env.example  tmuxp.yaml
go2_ros2_ws/docker/: .tmux.conf  Dockerfile  base_pkgs.txt  build.sh  entrypoint.sh  pip_pkgs.txt  ros2_install.sh
go2_ros2_ws/scripts/: bringup.sh  run.sh  setup.sh
go2_ros2_ws/setup/: docker_install.sh  nvidia-container-toolkit.sh
go2_ros2_ws/src/bringup/: CMakeLists.txt  package.xml
go2_ros2_ws/src/bringup/launch/: launch_control.py  launch_elevation_mapping.py  launch_go2.py  launch_lio.py  launch_measurement.py  launch_mocap_odom.py  launch_robot_state.py  launch_rviz.py  launch_state_machine.py  launch_tfs.py
go2_ros2_ws/src/bringup/rviz/: rviz.rviz
go2_ros2_ws/src/config/: CMakeLists.txt  package.xml
go2_ros2_ws/src/config/config/: common.yaml  control.yaml  elevation_mapping.yaml  lio.yaml  measurement.yaml  simdist_controller.yaml  terrain_analysis_simple.yaml  transform_cloud.yaml
go2_ros2_ws/src/control/: CMakeLists.txt  package.xml
go2_ros2_ws/src/control/control/: simdist_controller_node.py
go2_ros2_ws/src/control/include/control/: motor_crc.h
go2_ros2_ws/src/control/src/: cmd_vel_pub.cpp  motor_crc.cpp  state_machine.cpp
go2_ros2_ws/src/elevation_mapping/: CMakeLists.txt  package.xml
go2_ros2_ws/src/elevation_mapping/src/: body_aligned_z_tf_pub.cpp  flatten_gridmap.cpp  pointcloud_to_gridmap.cpp  terrain_analysis_simple.cpp  world_tf_pub.cpp
go2_ros2_ws/src/measurement/: CMakeLists.txt  package.xml
go2_ros2_ws/src/measurement/measurement/: loop_timer.py  mocap.py  observer.py  pose_kf.py
go2_ros2_ws/src/measurement/src/: imu_to_clock.cpp  laser_mapping_simple.cpp  path_viz.cpp  repub_body_imu.cpp  state_transform_and_filter.cpp  transform_cloud.cpp
go2_ros2_ws/src/simdist_controller/: CMakeLists.txt  package.xml
go2_ros2_ws/src/simdist_controller/simdist_controller/: episode_logger_hdf5.py  simdist_controller_node.py
go2_ros2_ws/src/utils/: CMakeLists.txt  package.xml
go2_ros2_ws/src/visualization/: CMakeLists.txt  package.xml
go2_ros2_ws/src/visualization/visualization/: joint_state_pub.py
scripts/: aggregate_realworld_data.py  export_policies.py  finetune_model.py  generate_data.py  play_rl.py  process_data.py  simulate_go2.py  train_model.py  train_rl.py
simdist/control/: controller.py  controller_base.py  mppi.py
simdist/data/: __init__.py  data_processor.py  data_recorder.py  dataset.py  episode_aggregator.py
simdist/modeling/: encoders.py  losses.py  models.py  modules.py  scaler.py  trainer.py  types.py
simdist/rl/: __init__.py  cli_args.py  go2.py  go2_mdp.py  rsl_rl_ppo_cfg.py
simdist/utils/: buffer.py  config.py  extero.py  io.py  jax.py  model.py  paths.py  registry.py  torch.py
tests/: conftest.py  helpers.py  test_control.py  test_models.py
